--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@ function atualizar(){
 	$("#referencias").hide();
 	$("#tudo").hide();
 	$("#carregar").text("CLIQUE AQUI");
+	$("#carregar").hover(function(){
+		$("#carregar").text("RELAXA NÃO É UM VÍRUS");
+	},function(){
+		$("#carregar").text("CLIQUE AQUI");
+	});
 	$("#carregar").click(function(){
 		$("#carregar").fadeToggle(1000);
 		$("#tudo").fadeIn(1000);
