--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@ function atualizar(){
 	$("#projetos").hide();
 	$("#referencias").hide();
 	$("#tudo").hide();
-	$("#carregar").text("CLIQUE AQUI");
+	$("#carregar").text("PASSE O MOUSE EM CIMA");
 	$("#carregar").hover(function(){
-		$("#carregar").text("RELAXA NÃO É UM VÍRUS");
+		$("#carregar").text("AGORA CLIQUE AQUI");
 	},function(){
-		$("#carregar").text("CLIQUE AQUI");
+		$("#carregar").text("PASSE O MOUSE EM CIMA");
 	});
 	$("#carregar").click(function(){
 		$("#carregar").fadeToggle(1000);
