--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function atualizar(){
 	$("#carregar").hover(function(){
 		$("#carregar").text("AGORA CLIQUE");
 	},function(){
-		$("#carregar").text("PASSE O MOUSE EM CIMA");
+		$("#carregar").text("PONHA O MOUSE AQUI");
 	});
 	$("#carregar").click(function(){
 		$("#carregar").fadeToggle(1000);
