--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ function atualizar(){
 <div id="tudo" style="position:absolute;top:0px;left:0px;right:0px;z-index:1;" align="center">
 	<div style="width:100%;" align="left">
 		<a href="index.html">
-			<video width="50%" autoplay loop muted>
+			<video width="50%" playsinline autoplay loop muted>
 				<source src="ext\logo.webm" type="video/webm"/>
 				<source src="ext\logo.mp4" type="video/mp4"/>
 			</video>
