--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ function atualizar(){
 	$("#tudo").hide();
 	$("#carregar").text("PASSE O MOUSE EM CIMA");
 	$("#carregar").hover(function(){
-		$("#carregar").text("AGORA CLIQUE");
+		$("#carregar").text("CLIQUE");
 	},function(){
 		$("#carregar").text("PONHA O MOUSE AQUI");
 	});
