--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ function atualizar(){
 	$("#projetos").hide();
 	$("#referencias").hide();
 	$("#tudo").hide();
-	$("#carregar").text("PASSE O MOUSE EM CIMA");
+	$("#carregar").text("PONHA O MOUSE AQUI");
 	$("#carregar").hover(function(){
 		$("#carregar").text("CLIQUE");
 	},function(){
