--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ function atualizar(){
 		$("#carregar").text("PONHA O MOUSE AQUI");
 	});
 	$("#carregar").click(function(){
-		$("#carregar").fadeToggle(1000);
+		$("#carregar").fadeOut(1000);
 		$("#tudo").fadeIn(1000);
 	});
 }
