--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="description" content="Meu Portfólio Personalizado"/>
+<meta name="author" content="Arthur Souza Sally">
 
 <title>Portfólio de Arthur Souza Sally</title>
 
