--- a/index.html
+++ b/index.html
@@ -88,7 +88,12 @@ function atualizar(){
 	<div style="width:100%;" align="center">
 		<div style="width:calc(100% - 80px);" align="left">
 			<!-- Sobre -->
-			<img src="ext\sobre.gif" style="height:max(4.2vw,7.2vh);" onmousedown="$('#sobre').fadeToggle(250);"/>
+			<div onmousedown="$('#sobre').fadeToggle(250);">
+				<video style="height:max(4.2vw,7.2vh);" playsinline autoplay loop muted>
+					<source src="ext\sobre.webm" type="video/webm"/>
+					<source src="ext\sobre.mp4" type="video/mp4"/>
+				</video>
+			</div>
 			<div id="sobre" style="width:100%;" align="center">
 				<div style="width:80%;" align="left">
 					<span style="margin-left:50px;">Bo<font id="t001"></font>! Meu nome é Arthur Souza Sally (acho que já deu pra perceber), sou um programador formado em Engenharia de Computação pela PUC Goiás com o objetivo de trabalhar com Desenvolvimento de Jogos. Atualmente eu venho estudando por conta própria com o objetivo de me tornar um Tech Art com foco em Modern OpenGL e Blender.</span><br/>
