--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@ function atualizar(){
 			</div>
 			<br/>
 			<!-- Projetos -->
-			<img src="ext\projetos.gif" style="height:max(4.2vw,7.2vh);" onmousedown="$('#projetos').fadeToggle(250);"/>
+			<div onmousedown="$('#projetos').fadeToggle(250);">
+				<video style="height:max(4.2vw,7.2vh);" playsinline autoplay loop muted>
+					<source src="ext\projetos.webm" type="video/webm"/>
+					<source src="ext\projetos.mp4" type="video/mp4"/>
+				</video>
+			</div>
 			<div id="projetos" style="width:100%;max-height:40vh;overflow:auto;" align="center">
 				<div style="width:95%;">
 					<a href="https://arthursouzasally.itch.io/hannah-hill" target="_blank"><button class="op1" style="background:url('int/002.webp');background-size:100%;background-position:0px 85%;">Hannah Hill</button></a>
@@ -111,7 +116,12 @@ function atualizar(){
 			</div>
 			<br/>
 			<!-- Referências -->
-			<img src="ext\referencias.gif" style="height:max(4.2vw,7.2vh);" onmousedown="$('#referencias').fadeToggle(250);"/>
+			<div onmousedown="$('#referencias').fadeToggle(250);">
+				<video style="height:max(4.2vw,7.2vh);" playsinline autoplay loop muted>
+					<source src="ext\referencias.webm" type="video/webm"/>
+					<source src="ext\referencias.mp4" type="video/mp4"/>
+				</video>
+			</div>
 			<div id="referencias" style="width:100%;" align="center">
 				<div style="width:95%;overflow:auto;display:flex;flex-wrap:wrap;">
 					<a href="https://arthursouzasally.itch.io/" target="_blank"><img src="ext/itch.png" style="filter:blur(1px);"/></a><br/>
