--- a/index.html
+++ b/index.html
@@ -57,11 +57,9 @@ function atualizar(){
 	$("#projetos").hide();
 	$("#referencias").hide();
 	$("#tudo").hide();
-	$("#carregar").text("CLIQUE");
-	$("#carregar").click(function(){
-		$("#carregar").fadeOut(1000);
-		$("#tudo").fadeIn(1000);
-	});
+	$("#carregar").text("CARREGADO!");
+	$("#carregar").fadeOut(1000);
+	$("#tudo").fadeIn(1000);
 }
 
 </script>
