--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ function atualizar(){
 <!-- Corpo do Site -->
 <div id="tudo" style="position:absolute;top:0px;left:0px;right:0px;z-index:1;" align="center">
 	<div style="width:100%;" align="left">
-		<a href="index.html">
+		<a href="/">
 			<video width="50%" playsinline autoplay loop muted>
 				<source src="ext\logo.webm" type="video/webm"/>
 				<source src="ext\logo.mp4" type="video/mp4"/>
